--- a/CH_6/CH6_7a/CH6_7a.vcxproj
+++ b/CH_6/CH6_7a/CH6_7a.vcxproj
@@ -21,10 +21,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{AC4A81A7-C757-4E0E-ACBE-C8F3AB1F6A28}</ProjectGuid>
-    <RootNamespace>CH69</RootNamespace>
+    <ProjectGuid>{f442070e-df26-4fe5-bd04-6ca197bd7126}</ProjectGuid>
+    <RootNamespace>CH68</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>CH6_8</ProjectName>
+    <ProjectName>CH6_7a</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
