--- a/CH9/MyReview_cpp/MyReview_cpp.vcxproj.filters
+++ b/CH9/MyReview_cpp/MyReview_cpp.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CH9_11.cpp">
+    <ClCompile Include="review_source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
