--- a/CH9/CH9_12/CH9_12.vcxproj.filters
+++ b/CH9/CH9_12/CH9_12.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="소스.cpp">
+    <ClCompile Include="CH9_12.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
