--- a/CH10/CH10_3/CH10_3.vcxproj
+++ b/CH10/CH10_3/CH10_3.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{7310308e-74e3-4f70-b449-5e34ff754459}</ProjectGuid>
-    <RootNamespace>CH10</RootNamespace>
+    <ProjectGuid>{523eef4a-5b38-4cb9-bf28-f3ec64143521}</ProjectGuid>
+    <RootNamespace>CH103</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="CH10.cpp" />
+    <ClCompile Include="CH10_3.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Lecture.h" />
+    <ClInclude Include="Student.h" />
+    <ClInclude Include="Teacher.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
